[package]
name = "c_lang"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-level language that compiles to C"
license = "MIT"

[lib]
name = "c_lang"
path = "src/lib.rs"

[[bin]]
name = "c_lang_compiler"
path = "src/bin/compiler.rs"

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
console = "0.15"
indicatif = "0.17"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
dirs = "5.0"

[dev-dependencies]
pretty_assertions = "1.4"
test-case = "3.3"
